draft add skeleton

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -35,6 +35,10 @@
 \def\Eg{\emph{E.g}\bmvaOneDot}
 \def\etal{\emph{et al}\bmvaOneDot}
 
+\usepackage{xcolor}
+\newcommand\todolist[1]{\textcolor{red}{#1}}
+\newcommand\MZY[1]{\textcolor{green}{#1}}
+
 %-------------------------------------------------------------------------
 % Document starts here
 \begin{document}
