--- a/doc/paper_draft/sections/1-introduction.tex
+++ b/doc/paper_draft/sections/1-introduction.tex
@@ -10,7 +10,7 @@ The gnomonic projection is common tool used in geography mapping a continued cur
 
 Meanwhile, to make the spherical sampled uniformly, the tangent points (gnomonic projection center point) selected base on the Icosahedron , which split a sphere to 20 equal size faces.
 
-In this paper there are x technical contributions:
+In this paper there are ? technical contributions:
 
 1) propose a gnomonic projection based panoramic optical flow method to solve the error caused by the equirectangular image's large distortion;
 
