--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -1,8 +1,9 @@
 \section{Conclusion}
 
-\subsection{Discussion}
+\textbf{Discussion}
 
 
-\subsection{Future Work}
+\textbf{Future Work}
 
+To sccelerate the projection and stitch step, with multi-thread or c++.
 
