1) update draft;2) clearn readme;3) update of evaluation

--- a/doc/paper_draft/sections/2-relatedworks.tex
+++ b/doc/paper_draft/sections/2-relatedworks.tex
@@ -30,6 +30,14 @@ This method propose for self-supervised learn pathway.
 Because of non-linear project between the scene and image, there is distortion in the image, especially in the poles of panoramic image.
 How to git ride of the distortion is key point of panoramic image processing method. 
 
+\textbf{Gnomonic Projection} ~\cite{gnomonicprojection}
+
+The methods use gnomonic projection project part of sphere to tangent plane, which preserve geodesics and have little distortion near the central point.
+So the tangent plane is hired to mitigate the influence of the panoramic image  distortion on the perspective image processing methods.
+
+\cite{coors2018spherenet} use Gnomonic Projection to directly sample data from panoramic image, in this way they transform the omnidirectional sampling to perspective's.
+
+\textbf{Tangent Images}
 \textbf{Icosahedron}
 
 Icosahedron is used to averagely sampling from the panoramic image, to make less overlap area between each sampling area.
@@ -39,12 +47,6 @@ Icosahedron is used to averagely sampling from the panoramic image, to make less
 
 %\subsection{Undistortion}
 
-\textbf{Gnomonic Projection} ~\cite{gnomonicprojection}
-
-The methods use gnomonic projection project part of sphere to tangent plane, which preserve geodesics and have little distortion near the central point.
-So the tangent plane is hired to mitigate the influence of the panoramic image  distortion on the perspective image processing methods.
-
-\cite{coors2018spherenet} use Gnomonic Projection to directly sample data from panoramic image, in this way they transform the omnidirectional sampling to perspective's.
 
 \textbf{Cube Map}
 
@@ -66,16 +68,28 @@ Equirectangular Image format is most popular panoramic image format which have b
 \subsection{Panoramic Dataset}
 
 
+The real word data rich and colorful, but it is very hard to estimate or measure the accurate segmentation, motion flow, e.t.c form the real word scene.
+So the synthetic dataset is commonly haired to generate the ground truth data for training or performance evaluation, such as ~\cite{habitat19iccv}.
+
+Meanwhile, the real word photo image is hard to estimate accurate optical flow.
+Although KITTI~\cite{Menze2018JPRS} or MPI Sintel~\cite{Butler:ECCV:2012} pinhole image optical flow, e.t.c currently don't have any public panoramic optical flow dataset is available.
+
+The rasterization render method OpenGL used to synthesize the ground truth optical flow.
+The equirectangular optical flow generation algorithm introduction in Section. \ref{sec:app:panoof}.
+Few public indoor 3D datasets are hired to render the ground truth data.
+
+- Replica ~\cite{replica19arxiv}
+
 SUMO
 
-Matterport3D
 
 %Realworld
 3D Mesh dataset:
 - Stanford2D3D \cite{armeni2017joint}
-- Matterport3D
+- Matterport3D ~\cite{Matterport3D}
 - Replica
 - iGibson (Gibson)
+
 
 360 Image dataset:
 - MatterportLayout dataset: https://github.com/ericsujw/Matterport3DLayoutAnnotation, labeled scene
