fix sph2erp and erp2sph error; fix of end point rotation

--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -11,15 +11,25 @@
 
 \todolist{Overview our method, including steps.}
 
+As shown in Fig.~\ref{fig:approach:pipeline}, the method compose with 3 steps:
+
+\begin{enumerate}
+	\item Estimate ERP images optial flow to align the target ERP images to srouce image with the estimated rotation;
+	\item Project the ERP aligned target ERP image to with CubeMap images, and estimate optical flow for each face, then stich them. And ;
+	\item Porject the CubeMap aligned target ERP image with Icosahdron, ;
+	\item Accumulate all step optical flow together.
+\end{enumerate}
+
+Two Technical pipeline:
+\todolist{Rough align the images, with roation.}
+
+\todolist{Rough and warp based method. Why not warp base method? CubeMap warp the target image, and Ico compute the cubemap warpped image. Finally, accumualte all optical flow together.}
 
 The optical flow $\textbf{f}$ is estimated pixel displacement vector $f(u,v)$ for each pixel $(u,v)$ in a sequence image pair from source image $I_{src}$ to target image $I_{tar}$.
 The $f(u,v)$ compose with $f_1(u,v)$ and $f_2(u,v)$, which is the displacement in image's horizontal direction $x$ and vertical direction $y$ respectively.
 Optical flow 
 
 $I_{tar}(u',v')$ is corresponding the pixel $I_{src}(u + f_1(u,v), v + f_2(u,v))$.
-
-%\subsection{Preliminary}
-
 
 \textbf{360 Optical Flow Expression (Wrap-around)}
 \todolist{GT data how to process the Warp Around, Cross Image Boundary.Why use the without warp around optical flow?}
