fix tex compile errors

--- a/doc/paper_draft/egbib.bib
+++ b/doc/paper_draft/egbib.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 
 @misc{Authors06,
  author = {Authors},
@@ -121,3 +122,5 @@ year = 2000
   booktitle =	 "Proc. CVPR",
   year =	 "1986",
 }
+
+@Comment{jabref-meta: databaseType:bibtex;}
